<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mreaves"
        android:text="@string/mpt"
        android:textColor="#58180D"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSizeTypeAlign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-4dp"
        android:text="@string/mpt"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/line_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSizeTypeAlign" />

    <TextView
        android:id="@+id/txtAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/AC"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSeparator" />

    <TextView
        android:id="@+id/txtACvalue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintStart_toEndOf="@+id/txtAC"
        app:layout_constraintTop_toTopOf="@+id/txtAC" />

    <TextView
        android:id="@+id/txtHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/HP"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAC" />

    <TextView
        android:id="@+id/txtHPvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintStart_toEndOf="@+id/txtHP"
        app:layout_constraintTop_toTopOf="@+id/txtHP" />

    <TextView
        android:id="@+id/txtSPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Speed"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHP" />

    <TextView
        android:id="@+id/txtSPDvalue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintStart_toEndOf="@+id/txtSPD"
        app:layout_constraintTop_toTopOf="@+id/txtSPD" />

    <View
        android:id="@+id/viewSeparator2"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/line_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSPD" />

    <LinearLayout
        android:id="@+id/layoutAttributes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSeparator2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STR"
                android:textColor="@color/dnd_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mpt"
                android:textColor="@color/dnd_red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DEX"
                android:textColor="@color/dnd_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mpt"
                android:textColor="@color/dnd_red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CON"
                android:textColor="@color/dnd_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mpt"
                android:textColor="@color/dnd_red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/INT"
                android:textColor="@color/dnd_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIntl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mpt"
                android:textColor="@color/dnd_red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WIS"
                android:textColor="@color/dnd_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtWis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mpt"
                android:textColor="@color/dnd_red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CHA"
                android:textColor="@color/dnd_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mpt"
                android:textColor="@color/dnd_red" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/viewSeparator3"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/line_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutAttributes" />

    <TextView
        android:id="@+id/txtSavingThrowLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/saving_throw"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSeparator3" />

    <TextView
        android:id="@+id/txtSavingThrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSavingThrowLabel"
        app:layout_constraintTop_toTopOf="@+id/txtSavingThrowLabel" />

    <TextView
        android:id="@+id/txtSkillLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/skill"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSavingThrow" />

    <TextView
        android:id="@+id/txtSkill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSkillLabel"
        app:layout_constraintTop_toTopOf="@+id/txtSkillLabel" />

    <TextView
        android:id="@+id/txtDamageVulnLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/damage_vulnerabilities"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSkill" />

    <TextView
        android:id="@+id/txtDamageVuln"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDamageVulnLabel"
        app:layout_constraintTop_toTopOf="@+id/txtDamageVulnLabel" />

    <TextView
        android:id="@+id/txtDamageResiLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/damage_resistances"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDamageVuln" />

    <TextView
        android:id="@+id/txtDamageResi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDamageResiLabel"
        app:layout_constraintTop_toTopOf="@+id/txtDamageResiLabel" />

    <TextView
        android:id="@+id/txtDamageImunLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/damage_immunities"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDamageResi" />

    <TextView
        android:id="@+id/txtDamageImun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDamageImunLabel"
        app:layout_constraintTop_toTopOf="@+id/txtDamageImunLabel" />

    <TextView
        android:id="@+id/txtConditionImunLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/condition_immunities"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDamageImun" />

    <TextView
        android:id="@+id/txtConditionImun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtConditionImunLabel"
        app:layout_constraintTop_toTopOf="@+id/txtConditionImunLabel" />

    <TextView
        android:id="@+id/txtSensesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Senses"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConditionImun" />

    <TextView
        android:id="@+id/txtSenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSensesLabel"
        app:layout_constraintTop_toTopOf="@+id/txtSensesLabel" />

    <TextView
        android:id="@+id/txtLanguagesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/languages"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenses" />

    <TextView
        android:id="@+id/txtLanguages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLanguagesLabel"
        app:layout_constraintTop_toTopOf="@+id/txtLanguagesLabel" />

    <TextView
        android:id="@+id/txtChallengeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/challenge"
        android:textColor="@color/dnd_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLanguages" />

    <TextView
        android:id="@+id/txtChallenge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mpt"
        android:textColor="@color/dnd_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtChallengeLabel"
        app:layout_constraintTop_toTopOf="@+id/txtChallengeLabel" />

    <View
        android:id="@+id/viewSeparator4"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/line_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChallenge" />

    <ImageView
        android:id="@+id/ivMonster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSeparator4"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>
